--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "Add comment to PRs in GitHub with version tag for latest release",
   "main": "index.js",
+  "bin": {
+    "pr-tagger": "./index.js"
+  },
   "scripts": {
     "test": "npm test"
   },
