Get commit list from repo in current directory
Using just the basic example in [commit-stream](https://www.npmjs.com/package/commit-stream)

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "homepage": "https://github.com/jcollado/pr-tagger#readme",
   "dependencies": {
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "commit-stream": "^1.0.1",
+    "list-stream": "^1.0.0",
+    "split2": "^1.0.0"
   }
 }
