--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "split2": "^1.0.0"
   },
   "devDependencies": {
+    "ghooks": "^1.0.1",
     "standard": "^5.4.1"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm test"
+    }
   }
 }
