--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commander": "^2.9.0",
     "commit-stream": "^1.0.1",
     "list-stream": "^1.0.0",
+    "pkg-to-id": "0.0.3",
     "split2": "^1.0.0"
   },
   "devDependencies": {
