--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "commander": "2.9.0",
     "pkg-to-id": "0.0.3",
+    "semver-regex": "^1.0.0",
     "winston": "2.1.1"
   },
   "devDependencies": {
