--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pr-tagger": "./pr-tagger.js"
   },
   "scripts": {
+    "cover": "istanbul cover _mocha -- test.js",
     "lint": "standard",
     "pretest": "npm run lint",
     "test": "mocha test.js"
@@ -38,6 +39,7 @@
   "devDependencies": {
     "chai": "3.4.1",
     "ghooks": "1.0.1",
+    "istanbul": "0.4.1",
     "mocha": "2.3.4",
     "standard": "5.4.1"
   },
