--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "ghooks": "1.0.1",
     "istanbul": "0.4.1",
     "mocha": "2.3.4",
+    "proxyquire": "1.7.3",
+    "sinon": "1.17.2",
+    "sinon-chai": "2.8.0",
     "standard": "5.4.1"
   },
   "config": {
