--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "istanbul": "0.4.1",
     "mocha": "2.3.4",
     "require-inject": "1.3.0",
+    "rewire": "2.5.0",
     "sinon": "1.17.2",
     "sinon-chai": "2.8.0",
     "standard": "5.4.1"
