--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ghauth": "3.0.0",
     "ghissues": "1.1.2",
     "github-url": "1.2.0",
+    "promisify-node": "0.3.0",
     "semver-regex": "1.0.0",
     "winston": "2.1.1"
   },
