--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postversion": "git push && git push --tags",
     "pretest": "npm run lint",
     "preversion": "npm test",
-    "test": "mocha ./test/*.js"
+    "test": "mocha --recursive ./test"
   },
   "repository": {
     "type": "git",
