--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pr-tagger": "./pr-tagger.js"
   },
   "scripts": {
-    "cover": "istanbul cover _mocha -- ./test/*.js",
+    "cover": "istanbul cover _mocha -- --recursive ./test",
     "coveralls": "istanbul cover --report lcovonly _mocha && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "lint": "standard",
     "postversion": "git push && git push --tags",
