--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "chai": "3.4.1",
+    "chai-as-promised": "5.2.0",
     "coveralls": "2.11.6",
     "ghooks": "1.0.3",
     "istanbul": "0.4.2",
