--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "multitest": "0.2.0",
     "require-inject": "1.3.0",
     "sinon": "1.17.2",
+    "sinon-as-promised": "4.0.0",
     "sinon-chai": "2.8.0",
     "standard": "5.4.1"
   },
