Push changes and tags in a single command
This is useful to avoid running all the test cases related to the
pre-push commit twice

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coveralls": "istanbul cover --report lcovonly _mocha -- --recursive ./test && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "lint": "standard",
     "multitest": "multitest",
-    "postversion": "git push && git push --tags",
+    "postversion": "git push --follow-tags",
     "premultitest": "npm run lint",
     "pretest": "npm run lint",
     "preversion": "npm run multitest",
