--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ghissues": "1.1.2",
     "github-url": "1.2.0",
     "promisify-object": "1.1.0",
-    "semver-regex": "1.0.0",
+    "semver": "5.1.0",
     "winston": "2.1.1"
   },
   "devDependencies": {
