--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "github-url": "1.2.0",
     "promisify-object": "1.1.0",
     "semver": "5.1.0",
+    "semver-regex": "1.0.0",
     "winston": "2.1.1"
   },
   "devDependencies": {
