--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "pr-tagger": "./pr-tagger.js"
   },
   "scripts": {
+    "build": "babel -d lib src",
     "cover": "istanbul cover _mocha -- --recursive ./test",
     "coveralls": "istanbul cover --report lcovonly _mocha -- --recursive ./test && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "lint": "standard",
     "multitest": "multitest",
     "postversion": "git push --follow-tags",
     "premultitest": "npm run lint",
+    "prepublish": "npm run build",
     "pretest": "npm run lint",
     "preversion": "npm run multitest",
     "test": "mocha --compilers js:babel-register --recursive ./test"
